# ai-harness

./: .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  EXPLORER_V1_V2_GAPS.md  README.md  ai-harness  ai-harness-ui  ai-harness.yml  pyproject.toml
.github/workflows/: ai-harness-ci.yml
draft-improvements/: ARCHITECTURE.md  ARCHITECTURE_COUNTER.md  README.md  ai-harness-explore-tooling.md  e2e-benchmarking.md  git-flows-support.md  harness-design-strategy-notes.md  harness-environment-isolation.md  new-phases-intro-rules.mc  orchestator-manual-prompt.md  the-slash-command.md
draft-improvements/extreme-harness-ideas/: extreme-harness-transcript-sumary.md  extreme-harness-transctipt.md
draft-improvements/flows-reformulation/: analysis-as-ssd-explorer.md  design-phase-improvements.md  explore-pipeline-restructure.md  explorer-improvements.md  purposal-improvements.md  the-escalation-artifacts-issue.md
draft-improvements/security/: provider-permissions.md
draft-improvements/source-of-true-and-learning/: source-of-true-and-learning.md
experimental/test/: doc_understanding_cases.py  run_live_doc_eval.py  test_architecture_doc_offline.py
harness/: recommended-packages.json  run.py
harness/ai_harness/: __init__.py  actions.py  bundle_inputs.py  canonical.py  capabilities.py  ci_support.py  config.py  errors.py  explorer_contracts.py  explorer_gate.py  explorer_scope_paths.py  models.py  output.py  recommended_packages.py  repository_policy.py  route_heuristics.py  router.py  run_display.py  run_identity.py  strategy.py
harness/capabilities/: design.json  explore.json  explore_ci_barrier.json  explore_clarification_gate.json  explore_delta.json  explore_evidence_collection.json  explore_evidence_digest.json  (+23 more)
harness_v2/: __init__.py
limitations/: README.md
migration-roadmap/: evaluation-criteria.md  frontend-backend-hexagonal-boundaries.md  v2-migration-roadmap.md
scripts/: check_architecture.py  ci_signal_report.py  doctor.py  install.py  refresh_knowledge.py  uninstall.py
test_v2/: __init__.py
(+615 files in other folders)
