[build-system]
requires = ["setuptools"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "ai-harness"
version = "0.1.0"
requires-python = ">=3.12"

# ---------------------------------------------------------------------------
# pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]

# ---------------------------------------------------------------------------
# ruff: broad syntax/import guardrails; tighten as boundaries stabilize
# ---------------------------------------------------------------------------
[tool.ruff]
target-version = "py312"
line-length = 100
exclude = [
    "__pycache__",
    ".git",
    ".pytest_cache",
    ".ruff_cache",
    ".mypy_cache",
    ".orchestration",
    "draft-improvements",
    "knowledge-source",
]

[tool.ruff.lint]
# E = pycodestyle errors, F = pyflakes, I = isort
select = ["E", "F", "I"]
ignore = [
    "E501",  # line-too-long: enforce after touched boundaries are stable
    "F401",  # unused-import: enable per boundary as ownership becomes clear
    "F811",  # redefinition of unused name
    "E741",  # ambiguous variable names (l, O, I)
]

[tool.ruff.lint.isort]
known-first-party = ["harness"]

[tool.ruff.lint.per-file-ignores]
# Tests use sys.path.insert() before imports — this pattern is project-wide.
"tests/**" = ["E402"]

# ---------------------------------------------------------------------------
# mypy: staged type coverage; expand as boundaries stabilize
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
follow_imports = "skip"
# Staged coverage: add modules after their boundary is stable and validated.
files = [
    "harness/ai_harness/models.py",
    "harness/ai_harness/errors.py",
    "harness/ai_harness/contracts",
    "harness/ai_harness/providers/base.py",
]
